<resources>
    <string name="app_name">ParkingApp</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="car">Car</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">Correo Electrónico</string>
    <string name="password_text">Contraseña</string>
    <string name="forgot_password">Olvidó su contraseña?</string>
    <string name="text_login">Ingresar</string>
    <string name="text_signup">Registrarse</string>
    <string name="name_text">Nombres</string>
    <string name="password2_text">Confirmar Contraseña</string>
    <string name="lastname_text">Apellidos</string>
</resources>